Bug 43688 - [945GM SNA] GPU hang in gtkperf
Summary: [945GM SNA] GPU hang in gtkperf
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 03:49 UTC by Paul Neumann
Modified: 2011-12-10 05:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
i915_error_state from debugfs after the hang (801.15 KB, application/octet-stream)
2011-12-10 03:49 UTC, Paul Neumann
no flags Details

Description Paul Neumann 2011-12-10 03:49:18 UTC
Created attachment 54288 [details]
i915_error_state from debugfs after the hang

With the latest xf86-video-intel from git and SNA enabled, running gtkperf causes my GPU to hang. Xorg.log and dmesg show nothing particularly interesting apart from the fact that the GPU is hung.
Comment 1 Chris Wilson 2011-12-10 05:27:17 UTC
commit b5a6bc9e33a2797c926969e1f98b4a9a796248c5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Dec 10 13:14:45 2011 +0000

    sna/gen[23]: Fixup render targets with pitches below hw minimum
    
    gen2/3 have a restriction that the 3D pipeline cannot render to a pixmap
    with a pitch less than 8/16 respectively. Rather than mandating all
    pixmaps to be created with a stride greater than 16, fixup the bo for
    the rare occasions when it is necessary.
    
    Reported-by: Paul Neumann <paul104x@yahoo.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43688
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

That looks like it should do the trick. Thanks for the bug report!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.