src/sna/gen3_render.c
@@ -2175,7 +2175,9 @@ gen3_align_vertex(struct sna *sna,
 }
 
 static Bool
-gen3_composite_set_target(struct sna_composite_op *op, PicturePtr dst)
+gen3_composite_set_target(struct sna *sna,
+			  struct sna_composite_op *op,
+			  PicturePtr dst)
 {
 	struct sna_pixmap *priv;
 
@@ -2188,6 +2190,22 @@ gen3_composite_set_target(struct sna_composite_op *op, PicturePtr dst)
 	priv = sna_pixmap_force_to_gpu(op->dst.pixmap);
 	if (priv == NULL)
 		return FALSE;
+
+	if (priv->gpu_bo->pitch < 16) {
+		struct kgem_bo *bo;
+
+		if (priv->pinned)
+			return FALSE;
+
+		bo = kgem_replace_bo(&sna->kgem, priv->gpu_bo,
+				     op->dst.width, op->dst.height, 16,
+				     op->dst.pixmap->drawable.bitsPerPixel);
+		if (bo == NULL)
+			return FALSE;
+
+		kgem_bo_destroy(&sna->kgem, priv->gpu_bo);
+		priv->gpu_bo = bo;
+	}
 
 	op->dst.bo = priv->gpu_bo;
 	op->damage = &priv->gpu_damage;
@@ -2380,7 +2398,7 @@ gen3_render_composite(struct sna *sna,
 
 	memset(&tmp->u.gen3, 0, sizeof(tmp->u.gen3));
 
-	if (!gen3_composite_set_target(tmp, dst)) {
+	if (!gen3_composite_set_target(sna, tmp, dst)) {
 		DBG(("%s: unable to set render target\n",
 		     __FUNCTION__));
 		return FALSE;
@@ -2913,7 +2931,7 @@ gen3_render_composite_spans(struct sna *sna,
 	if (need_tiling(sna, width, height))
 		return FALSE;
 
-	if (!gen3_composite_set_target(&tmp->base, dst)) {
+	if (!gen3_composite_set_target(sna, &tmp->base, dst)) {
 		DBG(("%s: unable to set render target\n",
 		     __FUNCTION__));
 		return FALSE;
